# salmon-rnaseq

./: .dockstore.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  bulk-pipeline-manifest.json  bulk-pipeline.cwl  common.py  docker-compose.yaml  docker_images.txt  gather_sequence_bundles.cwl  make_expression_matrix.py  pipeline-manifest.json  pipeline.cwl  pipeline.wdl  pipeline_multi.cwl  pyproject.toml  salmon_quant.cwl  test.wdl.json
data/: ensembl_hugo_mapping.json.xz
docker/analysis/: Dockerfile  (+1 more)
expression-matrix/: Dockerfile
fastqc/: Dockerfile  fastqc_wrapper.py
salmon/: Dockerfile  bulk_salmon_wrapper.py  fastq_utils.py  salmon_wrapper.py
scanpy-analysis/: Dockerfile  alevin_to_anndata.py  fastqc_wrapper.py  make_expression_matrix.py  requirements.txt  scanpy_entry_point.py
steps/: adjust-barcodes.cwl  alevin-to-anndata.cwl  annotate-cells.cwl  annotate-sciseq-barcodes.cwl  bulk-salmon-mouse.cwl  bulk-salmon.cwl  cluster-diffexpr.cwl  compute-qc-metrics.cwl  compute-qc-metrics.wdl  concatenate-h5ad.cwl  correct-barcodes.cwl  deepscence.cwl  dim-reduction-clustering.cwl  expand-barcodes.cwl  expression-matrix.cwl  fastqc.cwl  fastqc.wdl  filter-normalize.cwl  map_hugo_symbols.cwl  ome-tiff-convert.cwl  pipeline.cwl  qc.cwl  salmon-quantification.cwl  salmon-quantification.wdl  salmon.cwl  scanpy-analysis.cwl  scanpy-analysis.wdl  scvelo-analysis.cwl  scvelo-analysis.wdl  spaceranger-conversion.cwl  spatialdata-conversion.cwl  squidpy-analysis.cwl  squidpy-analysis.wdl  trim-reads.cwl
tests/: conftest.py  test_client.py
(+90 files in other folders)
