[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "salmon_rnaseq"
description = "The HuBMAP scRNA-seq pipeline is built on Salmon, Scanpy, and scVelo, and is implemented as a CWL workflow wrapping command-line tools encapsulated in Docker containers."
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["scrna-seq", "salmon-rnaseq", "salmon", "rnaseq"]
license = {text = "GNU General Public License v3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "cwltool~=3.1",
    'click~=8.1',
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit~=2.20",
    "pytest~=7.2",
]

[project.scripts]
salmon-rnaseq = "salmon_rnaseq.cli:main"

[tool.setuptools.packages.find]
where = ["bin"]

[tool.black]
line-length = 99  # should consider 120
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["bin"]
